<resources>
    <string name="app_name">Subnet</string>
    <string name="subnet">Subnet</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="calculate">Calculate</string>
    <string name="ip_address">IP Address</string>
    <string name="unknown">Unknown</string>
    <string name="network_address">Network address:</string>
    <string name="usable_host_ip_range">Usable Host IP Range:</string>
    <string name="broadcast_address">Broadcast address:</string>
    <string name="total_number_of_hosts">Total Number of Hosts:</string>
    <string name="zero">0</string>
    <string name="number_of_usable_hosts">Number of Usable Hosts:</string>
    <string name="subnet_mask">Subnet Mask:</string>
    <string name="binary_subnet_mask">Binary Subnet Mask:</string>
    <string name="ip_class">IP Class:</string>
    <string name="ip_type">IP Type:</string>
    <string name="total_subnets">Total subnets:</string>
    <string name="bits_borrowed">Bits borrowed:</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="ranges">Ranges:</string>
</resources>