<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/subnet"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_blue_dark"
        app:cardCornerRadius="16dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ip_address_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.75"
                    android:textColorHint="@android:color/holo_blue_dark"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/red">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_ip_address"
                        android:textColorHint="@android:color/holo_blue_dark" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/sp_prefix"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.25"
                    android:entries="@array/prefix_length_array"
                    android:padding="16dp" />

            </LinearLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ip_class_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtnA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/a"
                    android:textColor="@android:color/holo_blue_dark" />

                <RadioButton
                    android:id="@+id/rbtnB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/b"
                    android:textColor="@android:color/holo_blue_dark" />

                <RadioButton
                    android:id="@+id/rbtnC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/c"
                    android:textColor="@android:color/holo_blue_dark" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:onClick="onCalculate"
                android:text="@string/calculate" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>